# GDM

./: CMakeLists.txt  COLABORATE.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_issue.md  feature_request.md
.github/workflows/: cmake.yml
coverage/: develop.md
examples/: CMakeLists.txt
examples/trigger_example/: CMakeLists.txt  main.cpp
lib/GDMBasics/: CMakeLists.txt
lib/GDMBasics/include/: Animator.h  Basics.h  Camera.h  GDMBasics.h  InputActions.h  Sprite.h  Trigger.h  TriggerShooter.h
lib/GDMBasics/src/: Camera.cpp  Element.cpp  Game.cpp  Room.cpp  Trigger.cpp  TriggerManager.cpp
tests/Triggers/: test_Triggers.cpp
